Fixed radio in Add Review Modal to align

--- a/public/styles.css
+++ b/public/styles.css
@@ -621,27 +621,26 @@ Add Review Modal
 
 
 .current-char {
-	padding-top: 1%;
-	/* padding-bottom: 2%; */
+	padding-top: 2%;
+	padding-bottom: 1%;
 	font-style: italic;
 }
 
 .char-radio-container {
-	display: inline-block;
-}
-
-.char-ratio-btn {
-  text-align: center;
-	width: 108px;
+	/* display: inline-block; */
+	display: inline-grid;
+	width: 116px;
 }
 
 .char-ratio-label {
+	display: flex;
+	text-align: center;
+	justify-content: center;
+	align-items: flex-start;
+	padding: 5px 0;
+	line-height: initial;
+	height: 35px;
 	font-size: small;
-  display: block;
-  text-align: center;
-	width: 108px;
-	padding-top: 5%;
-	padding-bottom: 10%;
 }
 
 
